Oracle-Oracle Notebook updated

--- a/Excel-Oracle.ipynb
+++ b/Excel-Oracle.ipynb
@@ -15,7 +15,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 1,
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd\n",
@@ -136,7 +136,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 3,
             "source": [
                 "# Rename fields to match database (if needed)\n",
                 "df_excel.rename(columns = {'TEST_DATETIME':'test_datetime', }, inplace = True)\n",
@@ -156,7 +156,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 4,
             "source": [
                 "# Get the current date/time\n",
                 "now_is = datetime.now().strftime(\"%Y/%m/%d %H:%M:%S\")\n",
@@ -175,7 +175,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 5,
             "source": [
                 "# String to Date/Time\n",
                 "df_excel['test_datetime'] = pd.to_datetime(df_excel['test_datetime'])\n",
@@ -193,7 +193,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 6,
             "source": [
                 "# List DataFrame columns\n",
                 "df_excel.columns\n",
@@ -205,15 +205,15 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "TEST_DATETIME    string\n",
-                            "TEST_NUMBER       Int64\n",
-                            "TEST_TEXT        string\n",
-                            "RECORD_ADDED     string\n",
+                            "test_datetime    datetime64[ns]\n",
+                            "test_number               Int64\n",
+                            "test_text                string\n",
+                            "record_added     datetime64[ns]\n",
                             "dtype: object"
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 3
+                    "execution_count": 6
                 }
             ],
             "metadata": {}
