--- a/Oracle-Oracle.ipynb
+++ b/Oracle-Oracle.ipynb
@@ -19,6 +19,8 @@
             "source": [
                 "# Pandas for data manipulation\n",
                 "import pandas as pd\n",
+                "# Used to get the current date/time\n",
+                "from datetime import datetime\n",
                 "# Library to talk with Oracle, requires Python cx_Oracle module and the Oracle Instant Client to be installed on host\n",
                 "from sqlalchemy import create_engine"
             ],
@@ -84,6 +86,25 @@
                 "df_oracle_source.columns\n",
                 "# List field types\n",
                 "df_oracle_source.convert_dtypes().dtypes"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Update Record Added Fields"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Get the current date/time\n",
+                "now_is = datetime.now().strftime(\"%Y/%m/%d %H:%M:%S\")\n",
+                "# Populate the updated date/time\n",
+                "df_oracle_source['record_added'] = now_is"
             ],
             "outputs": [],
             "metadata": {}
@@ -157,7 +178,7 @@
             "execution_count": null,
             "source": [
                 "# Filter the Oracle data\n",
-                "date_query = (df_oracle_source['test_datetime'] >= \"2021-08-18\") & (df_oracle_source['test_datetime'] < \"2021-08-19\")\n",
+                "date_query = (df_oracle_source['test_datetime'] >= \"2021-08-25\") & (df_oracle_source['test_datetime'] < \"2021-08-26\")\n",
                 "df_filtered_oracle = df_oracle_source.query('@date_query')\n",
                 "# Send part part of the Oracle filtered DataFrame from source table to Oracle target table\n",
                 "df_filtered_oracle.to_sql(oracle_table_target, db_inst, if_exists='append', index=False)"
