--- a/Excel-Oracle.ipynb
+++ b/Excel-Oracle.ipynb
@@ -4,12 +4,12 @@
             "cell_type": "markdown",
             "source": [
                 "# Setup in VS Code\n",
-                "- ### First set your Python interpreter (Cmd/Ctl Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next \"pip3\" line\n",
-                "- ### Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
-                "- ### Next start a new Jupyter notebook (Cmd/Ctl Shift P): \"Jupyter: Create New Blank Notebook\"\n",
-                "- ### Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
-                "- ### Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
-                "- ### Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
+                "- First set your Python interpreter (Cmd/Ctl Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next \"pip3\" line\n",
+                "- Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
+                "- Next start a new Jupyter notebook (Cmd/Ctl Shift P): \"Jupyter: Create New Blank Notebook\"\n",
+                "- Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
+                "- Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
+                "- Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
             ],
             "metadata": {}
         },
