Setup steps fix

--- a/Oracle-UpdateDelete.ipynb
+++ b/Oracle-UpdateDelete.ipynb
@@ -7,7 +7,7 @@
                 "- First set your Python interpreter (Cmd/Ctl Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next \"pip3\" line\n",
                 "- Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
                 "- Next start a new Jupyter notebook (Cmd/Ctl Shift P): \"Jupyter: Create New Blank Notebook\"\n",
-                "- Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
+                "- Install \"pip3 install pandas\"\n",
                 "- Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
                 "- Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
             ],
