--- a/Oracle-UpdateDelete.ipynb
+++ b/Oracle-UpdateDelete.ipynb
@@ -107,7 +107,7 @@
                 "oracle_query_delrecord = \"SELECT * FROM %s WHERE %s='%d'\" % (str(oracle_table), str(filter_field_name), int(filter_field_value))\n",
                 "# Run query\n",
                 "df_oracle_delrecord = pd.read_sql_query(oracle_query_delrecord, con=db_inst)\n",
-                "# Statment to delete record\n",
+                "# Statement to delete record\n",
                 "oracle_statement_delrecord = \"DELETE FROM %s WHERE %s='%d'\" % (str(oracle_table), str(filter_field_name), int(filter_field_value))\n",
                 "# Delete record\n",
                 "db_inst.execute(oracle_statement_delrecord)\n",
