API-Excel setup updated

--- a/API-Excel.ipynb
+++ b/API-Excel.ipynb
@@ -7,6 +7,7 @@
                 "- First set your Python interpreter in (Cmd Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next line\n",
                 "- Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
                 "- Next start a new Jupyter notebook (Cmd Shift P): \"Jupyter: Create New Blank Notebook\"\n",
+                "- Install \"pip3 install requests\" and to be able to pull from a RESTful API\n",
                 "- Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\""
             ],
             "metadata": {}
