Field formatting option added

--- a/SampleData-Excel-CSV.ipynb
+++ b/SampleData-Excel-CSV.ipynb
@@ -34,7 +34,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 3,
             "source": [
                 "# Create DataFrame from scatch and populate it with test data\n",
                 "df_sampledata = pd.DataFrame(columns=['TEST_DATETIME', 'TEST_NUMBER', 'TEST_TEXT', 'RECORD_ADDED'], index=['record_a', 'record_b', 'record_c', 'record_d'])\n",
@@ -58,7 +58,108 @@
                 "# Get a random number with 6 digits\n",
                 "number_is = random.randint(100000, 1000000)\n",
                 "# Populate some data\n",
-                "df_sampledata.loc['record_d'] = pd.Series({'TEST_DATETIME': now_is, 'TEST_NUMBER': number_is, 'TEST_TEXT': text_is, 'RECORD_ADDED': now_is})"
+                "df_sampledata.loc['record_d'] = pd.Series({'TEST_DATETIME': now_is, 'TEST_NUMBER': number_is, 'TEST_TEXT': text_is, 'RECORD_ADDED': now_is})\n",
+                "# View new DataFrame\n",
+                "df_sampledata"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "                TEST_DATETIME TEST_NUMBER                       TEST_TEXT  \\\n",
+                            "record_a  2021/08/26 13:51:11      556971  Record added August 26 of 2021   \n",
+                            "record_b  2021/08/26 13:51:11      800959  Record added August 26 of 2021   \n",
+                            "record_c  2021/08/26 13:51:11      225239  Record added August 26 of 2021   \n",
+                            "record_d  2021/08/26 13:51:11      199915  Record added August 26 of 2021   \n",
+                            "\n",
+                            "                 RECORD_ADDED  \n",
+                            "record_a  2021/08/26 13:51:11  \n",
+                            "record_b  2021/08/26 13:51:11  \n",
+                            "record_c  2021/08/26 13:51:11  \n",
+                            "record_d  2021/08/26 13:51:11  "
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>TEST_DATETIME</th>\n",
+                            "      <th>TEST_NUMBER</th>\n",
+                            "      <th>TEST_TEXT</th>\n",
+                            "      <th>RECORD_ADDED</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>record_a</th>\n",
+                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "      <td>556971</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>record_b</th>\n",
+                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "      <td>800959</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>record_c</th>\n",
+                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "      <td>225239</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>record_d</th>\n",
+                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "      <td>199915</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 3
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Format Fields (optional since these are not maintained once written to Excel or CSV)"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 4,
+            "source": [
+                "# String to Date/Time\n",
+                "df_sampledata['TEST_DATETIME'] = pd.to_datetime(df_sampledata['TEST_DATETIME'])\n",
+                "df_sampledata['RECORD_ADDED'] = pd.to_datetime(df_sampledata['RECORD_ADDED'])\n",
+                "# String to Int\n",
+                "df_sampledata['TEST_NUMBER'] = df_sampledata['TEST_NUMBER'].astype(int)"
             ],
             "outputs": [],
             "metadata": {}
@@ -72,7 +173,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 5,
             "source": [
                 "# List DataFrame columns\n",
                 "df_sampledata.columns\n",
@@ -84,15 +185,15 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "TEST_DATETIME    string\n",
-                            "TEST_NUMBER       Int64\n",
-                            "TEST_TEXT        string\n",
-                            "RECORD_ADDED     string\n",
+                            "TEST_DATETIME    datetime64[ns]\n",
+                            "TEST_NUMBER               Int64\n",
+                            "TEST_TEXT                string\n",
+                            "RECORD_ADDED     datetime64[ns]\n",
                             "dtype: object"
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 3
+                    "execution_count": 5
                 }
             ],
             "metadata": {}
@@ -106,7 +207,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 6,
             "source": [
                 "# Send DataFrame to Excel file\n",
                 "df_sampledata.to_excel('testtable_source.xlsx', index=False)"
@@ -123,7 +224,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 7,
             "source": [
                 "# Send DataFrame to CSV file\n",
                 "df_sampledata.to_csv('testtable_source.csv', index=False)"
@@ -136,7 +237,7 @@
         "orig_nbformat": 4,
         "language_info": {
             "name": "python",
-            "version": "3.8.2",
+            "version": "3.8.0",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -148,10 +249,10 @@
         },
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3.8.2 64-bit"
+            "display_name": "Python 3.8.0 64-bit"
         },
         "interpreter": {
-            "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+            "hash": "082e9a3bcad0a290d0001e938aa60b99250c6c2ef33a923c00b70f9826caf4b7"
         }
     },
     "nbformat": 4,
