API-Oracle Notebook added

--- a/API-Oracle.ipynb
+++ b/API-Oracle.ipynb
@@ -7,8 +7,10 @@
                 "- First set your Python interpreter in (Cmd Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next line\n",
                 "- Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
                 "- Next start a new Jupyter notebook (Cmd Shift P): \"Jupyter: Create New Blank Notebook\"\n",
-                "- Install \"pip3 install requests\" and to be able to pull from a RESTful API\n",
-                "- Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\""
+                "- Install \"pip3 install requests\" to be able to pull from a RESTful API\n",
+                "- Install \"pip3 install pandas\" to be able to use DataFrames\n",
+                "- Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
+                "- Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
             ],
             "metadata": {}
         },
@@ -20,7 +22,11 @@
                 "import requests\n",
                 "from requests.structures import CaseInsensitiveDict\n",
                 "# Pandas for CSV/Excel manipulation\n",
-                "import pandas as pd"
+                "import pandas as pd\n",
+                "# Used to get the current date/time\n",
+                "from datetime import datetime\n",
+                "# Library to talk with Oracle, requires Python cx_Oracle module and the Oracle Instant Client to be installed on host\n",
+                "from sqlalchemy import create_engine"
             ],
             "outputs": [],
             "metadata": {}
@@ -66,6 +72,54 @@
         {
             "cell_type": "markdown",
             "source": [
+                "# Add Record Added Fields"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Get the current date/time\n",
+                "now_is = datetime.now().strftime(\"%Y/%m/%d %H:%M:%S\")\n",
+                "# Populate the updated date/time\n",
+                "df_drought['record_added'] = now_is"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Format Fields"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# String to Date/Time\n",
+                "df_drought['MapDate'] = pd.to_datetime(df_drought['MapDate'])\n",
+                "df_drought['ValidStart'] = pd.to_datetime(df_drought['ValidStart'])\n",
+                "df_drought['ValidEnd'] = pd.to_datetime(df_drought['ValidEnd'])\n",
+                "df_drought['record_added'] = pd.to_datetime(df_drought['record_added'])\n",
+                "# Remove all commas in field values\n",
+                "df_drought = df_drought.replace(',',\"\", regex=True)\n",
+                "# String to Float\n",
+                "df_drought['None'] = df_drought['None'].astype(float)\n",
+                "df_drought['D0'] = df_drought['D0'].astype(float)\n",
+                "df_drought['D1'] = df_drought['D1'].astype(float)\n",
+                "df_drought['D2'] = df_drought['D2'].astype(float)\n",
+                "df_drought['D3'] = df_drought['D3'].astype(float)\n",
+                "df_drought['D4'] = df_drought['D4'].astype(float)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "# API Columns"
             ],
             "metadata": {}
@@ -85,35 +139,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Format Fields (except for removing commas, optional since these are not maintained once written to Excel or CSV)"
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "source": [
-                "# String to Date/Time\n",
-                "df_drought['MapDate'] = pd.to_datetime(df_drought['MapDate'])\n",
-                "df_drought['ValidStart'] = pd.to_datetime(df_drought['ValidStart'])\n",
-                "df_drought['ValidEnd'] = pd.to_datetime(df_drought['ValidEnd'])\n",
-                "# Remove all commas in field values\n",
-                "df_drought = df_drought.replace(',',\"\", regex=True)\n",
-                "# String to Float\n",
-                "df_drought['None'] = df_drought['None'].astype(float)\n",
-                "df_drought['D0'] = df_drought['D0'].astype(float)\n",
-                "df_drought['D1'] = df_drought['D1'].astype(float)\n",
-                "df_drought['D2'] = df_drought['D2'].astype(float)\n",
-                "df_drought['D3'] = df_drought['D3'].astype(float)\n",
-                "df_drought['D4'] = df_drought['D4'].astype(float)"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "# Write API to Excel"
+                "# Oracle Setup and Test"
             ],
             "metadata": {}
         },
@@ -121,8 +147,18 @@
             "cell_type": "code",
             "execution_count": 6,
             "source": [
-                "# Send API DataFrame to Excel file\n",
-                "df_drought.to_excel('api_export.xlsx', index=False)"
+                "# Connection string (assumes Oracle TNS is already configured)\n",
+                "db_connection = 'oracle+cx_oracle://[account]:[pass]@ORACLE_TNS'\n",
+                "# Database connection\n",
+                "db_inst = create_engine(db_connection)\n",
+                "# Read existing Oracle table\n",
+                "oracle_table = \"droughttable\"\n",
+                "# Build query\n",
+                "oracle_query = \"SELECT * FROM %s\" % (str(oracle_table))\n",
+                "# Run a test query\n",
+                "df_oracle = pd.read_sql_query(oracle_query, con=db_inst)\n",
+                "# View your test DataFrame\n",
+                "df_oracle"
             ],
             "outputs": [],
             "metadata": {}
@@ -130,16 +166,54 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Write API to CSV"
+                "# Optional Drop Table before Loading Data"
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": null,
             "source": [
-                "# Send API DataFrame to CSV file\n",
-                "df_drought.to_csv('api_export.csv', index=False)"
+                "# Build statement\n",
+                "oracle_drop = \"DROP TABLE %s\" % (str(oracle_table))\n",
+                "# Drop table\n",
+                "db_inst.execute(oracle_drop)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Append API Data to Oracle"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Append API DataFrame to Oracle table\n",
+                "df_drought.to_sql(oracle_table, db_inst, if_exists='append', index=False)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Oracle Table Test after Load"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Run a test query\n",
+                "df_oracle_apiloaded = pd.read_sql_query(oracle_query, con=db_inst)\n",
+                "# View your test DataFrame\n",
+                "df_oracle_apiloaded"
             ],
             "outputs": [],
             "metadata": {}
